fix z-index of loader

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 @keyframes loader-back {
   0% {opacity: 1}
   75% {opacity: 1}
-  100% {opacity: 0}
+  100% {opacity: 0; z-index: -1;}
 }
 @media (max-width: 770px) {
   body {
